test/errors/error14.vult

fun foo() {
   val x = 1 + 1.0;
}
